--- a/templates/webapp/ourgroup.html
+++ b/templates/webapp/ourgroup.html
@@ -17,10 +17,10 @@
     <div class="row">
             <div class="col-md-6 team-more-parent">
                 <div class="panel panel-body team-more">
-                    <div style="float: left; width: 33%;">
-                        <img src="{% static 'webapp/image/3688325.jpg'  %}" lenght="auto" width="125px"> </img>
+                    <div class="group-div-image">
+                        <img class="team-image" src="{% static 'webapp/image/3688325.jpg'  %}"> </img>
                     </div>
-                    <div style="float: right; width: 66%;">
+                    <div class="group-div-description">
                     <h3 class="team-panel-title">Sergio García</h3>
                         <div class="team-more-title">{% trans "Project Manager" %}</div>
                         <div class="team-more-title">sergaralo@alum.us.es</div>
@@ -29,10 +29,10 @@
             </div>
             <div class="col-md-6 team-tastes-parent">
                 <div class="panel panel-body team-tastes">
-                    <div style="float: left; width: 33%;">
-                        <img src="{% static 'webapp/image/6684826.jpg'  %}" lenght="auto" width="125px"> </img>
+                    <div class="group-div-image">
+                        <img class="team-image" src="{% static 'webapp/image/6684826.jpg'  %}"> </img>
                     </div>
-                    <div style="float: right; width: 66%;">
+                    <div class="group-div-description">
                     <h3 class="team-panel-title">David González</h3>
                         <div class="team-more-title">{% trans "Developer" %}</div>
                         <div class="team-more-title">jesgonbel@alum.us.es</div>
@@ -45,10 +45,10 @@
     <div class="row">
             <div class="col-md-6 team-more-parent">
                 <div class="panel panel-body team-more">
-                    <div style="float: left; width: 33%;">
-                        <img src="{% static 'webapp/image/6688705.jpg'  %}" lenght="auto" width="125px"> </img>
+                    <div class="group-div-image">
+                        <img class="team-image" src="{% static 'webapp/image/6688705.jpg'  %}"> </img>
                     </div>
-                    <div style="float: right; width: 66%;">
+                    <div class="group-div-description">
                     <h3 class="team-panel-title">Arturo Jiménez</h3>
                         <div class="team-more-title">{% trans "Analyst and Tester" %}</div>
                         <div class="team-more-title">artjimlop@alum.us.es</div>
@@ -57,10 +57,10 @@
             </div>
             <div class="col-md-6 team-tastes-parent">
                 <div class="panel panel-body team-tastes">
-                    <div style="float: left; width: 33%;">
-                        <img src="{% static 'webapp/image/6689077.jpg'  %}" lenght="auto" width="125px"> </img>
+                    <div class="group-div-image">
+                        <img class="team-image" src="{% static 'webapp/image/6689077.jpg'  %}"> </img>
                     </div>
-                    <div style="float: right; width: 66%;">
+                    <div class="group-div-description">
                     <h3 class="team-panel-title">Antonio León</h3>
                         <div class="team-more-title">{% trans "Analyst and Tester" %}</div>
                         <div class="team-more-title">antleocar1@alum.us.es</div>
@@ -72,10 +72,10 @@
     <div class="row">
             <div class="col-md-6 team-more-parent">
                 <div class="panel panel-body team-more">
-                    <div style="float: left; width: 33%;">
-                        <img src="{% static 'webapp/image/1993257.jpg'  %}" lenght="auto" width="125px"> </img>
+                    <div class="group-div-image">
+                        <img class="team-image" src="{% static 'webapp/image/1993257.jpg'  %}"> </img>
                     </div>
-                    <div style="float: right; width: 66%;">
+                    <div class="group-div-description">
                     <h3 class="team-panel-title">Sergio Rodríguez</h3>
                         <div class="team-more-title">{% trans "Developer" %}</div>
                         <div class="team-more-title">serrodcal@alum.us.es</div>
@@ -84,10 +84,10 @@
             </div>
             <div class="col-md-6 team-tastes-parent">
                 <div class="panel panel-body team-tastes">
-                    <div style="float: left; width: 33%;">
-                        <img src="{% static 'webapp/image/5088244.jpg'  %}" lenght="auto" width="125px"> </img>
+                    <div class="group-div-image">
+                        <img class="team-image" src="{% static 'webapp/image/5088244.jpg'  %}"> </img>
                     </div>
-                    <div style="float: right; width: 66%;">
+                    <div class="group-div-description">
                     <h3 class="team-panel-title">Juan Manuel López</h3>
                         <div class="team-more-title">{% trans "Developer" %}</div>
                         <div class="team-more-title">jualoppaz@alum.us.es</div>
@@ -98,10 +98,10 @@
     <div class="row">
             <div class="col-md-6 team-more-parent">
                 <div class="panel panel-body team-more">
-                    <div style="float: left; width: 33%;">
-                        <img src="{% static 'webapp/image/545251.png'  %}" lenght="auto" width="125px"> </img>
+                    <div class="group-div-image">
+                        <img class="team-image" src="{% static 'webapp/image/545251.png'  %}"> </img>
                     </div>
-                    <div style="float: right; width: 66%;">
+                    <div class="group-div-description">
                     <h3 class="team-panel-title">Rafael Vázquez</h3>
                         <div class="team-more-title">{% trans "Developer Lead" %}</div>
                         <div class="team-more-title">rafvazsan@alum.us.es</div>
