--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -50,10 +50,10 @@
                         <li><a class="" href="#">{% trans "Recipes" %}</a></li>
                         <li><a class="" href="#">{% trans "Explore" %}</a></li>
                         <li><div class="input-group navbar-input-group fbSearch">
-                        <form id="search-form" class="navbar-form navbar-left" role="search" method="get" action="{% url 'search_recipe' ' ' %}">
+                        <form id="search-form" class="navbar-form navbar-left" role="search" method="get" action="{% url 'search_recipe'%}">
                             <div class="form-group">
-                            <input type="text" class="form-control border-search border-rect" placeholder="Search..."
-                                   id="srch-term">
+                            <input type="text" class="form-control border-search border-rect" placeholder="Search..." name="srchterm"
+                                   id="srchterm">
                                 <span class="input-group-btn navbar-input-group-btn">
                                     <button class="btn btn-default border-default" type="submit">
                                         <i class="glyphicon glyphicon-search"></i>
@@ -64,7 +64,7 @@
                             <ul>
                             <li class="header"><span class="text">Recipes</span></li>
                                 <li>
-                                    <a href="{% url 'search_recipe' ' ' %}">
+                                    <a href="{% url 'search_recipe'%}">
                                         <span class="glyphicon glyphicon-search"></span>
                                         <span class="text">Search recipes</span>
                                         <span class="category"></span>
@@ -209,18 +209,17 @@
         var hideSuggest = function(event){
             $(".suggest").css("display","none").fadeOut(2000);
         }
-        $("#srch-term").focus(function(){
+        $("#srchterm").focus(function(){
            $(".suggest").css("display","block").fadeIn(2000);
         });
         $(".suggest").find("a").mouseenter(function(){
-           $("#srch-term").off("blur");
+           $("#srchterm").off("blur");
         }).mouseleave(function(){
-           $("#srch-term").blur(hideSuggest);
+           $("#srchterm").blur(hideSuggest);
         });
-        $("#srch-term").blur(hideSuggest);
-        $("#srch-term").bind("input",function(){
-           var urlR = '/search/recipe/' +$(this).val();
-           $("#search-form").attr("action", urlR);
+        $("#srchterm").blur(hideSuggest);
+        $("#srchterm").bind("input",function(){
+           var urlR = '/search/recipe/?srchterm=' +$(this).val();
            $(".suggest").find(".category")[0].textContent=$(this).val();
            $(".suggest").find("a")[0].href=urlR;
            $(".suggest").find(".category")[1].textContent=$(this).val();
