--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -154,18 +154,18 @@
     </div>
     <!-- /.container -->
 </main>
-<footer>
+<footer class="hidden-xs hidden-sm">
     <div class="footer">
-        <div class="col-md-4 footer-logo-container hidden-xs hidden-sm">
+        <div class="col-md-4 footer-logo-container">
             <span class="footer-logo-helper"></span>
             <img class="footer-logo" src="{% static 'webapp/image/logo_footer.png' %}" class="img-circle">
         </div>
-        <div class="col-md-8 col-sm-12 col-xs-12 footer-content">
+        <div class="col-md-8 footer-content">
             <div class="row">
-                <div class="col-md-2 col-sm-12 col-xs-12 text-center"><a href="{% url 'terms_and_conditions' %}" class="footer-link">{%  trans "Terms & conditions" %}</a></div>
-                <div class="col-md-2 col-sm-12 col-xs-12 text-center"><a href="#" class="footer-link">{%  trans "Our goals" %}</a></div>
-                <div class="col-md-2 col-sm-12 col-xs-12 text-center"><a href="{% url 'about_team'%}" class="footer-link">The team</a></div>
-                <div class="col-md-2 col-sm-12 col-xs-12 text-center"><a href="{% url 'contact' %}" class="footer-link">{%  trans "Contact" %}</a></div>
+                <div class="col-md-2 text-center"><a href="{% url 'terms_and_conditions' %}" class="footer-link">{%  trans "Terms & conditions" %}</a></div>
+                <div class="col-md-2 text-center"><a href="#" class="footer-link">{%  trans "Our goals" %}</a></div>
+                <div class="col-md-2 text-center"><a href="{% url 'about_team'%}" class="footer-link">The team</a></div>
+                <div class="col-md-2 text-center"><a href="{% url 'contact' %}" class="footer-link">{%  trans "Contact" %}</a></div>
             </div>
         </div>
     </div>
