--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -27,7 +27,7 @@
 <header>
     {% block navbar %}
         {% load tags %}
-        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-default navbar-fixed-top navbar-red" role="navigation">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -55,7 +55,7 @@
                             <input type="text" class="form-control border-search border-rect" placeholder="Search..."
                                    name="srch-term"
                                    id="srch-term">
-                                <span class="input-group-btn navbar-input-group-btn">
+                                <span class="input-group-btn-red navbar-input-group-btn">
                                     <button class="btn btn-default border-default" type="submit">
                                         <i class="glyphicon glyphicon-search"></i>
                                     </button>
@@ -64,7 +64,7 @@
                         </form>
                     </div>
                     <!-- Button trigger modal -->
-                    <button class="plus btn btn-default" data-toggle="modal" data-target="#modalFeedback">
+                    <button class="plus-bar btn btn-default" data-toggle="modal" data-target="#modalFeedback">
                         <i class="fa fa-comment"></i> Feedback
                     </button></li>
                     </ul>
@@ -73,7 +73,7 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         {% if user.is_authenticated %}
-                            <li><p class="navbar-text text-red">{% trans "Hello" %}, {{ user.profile.get.display_name }}.</p>
+                            <li><p class="navbar-text text-white">{% trans "Hello" %}, {{ user.profile.get.display_name }}.</p>
                             </li>
                             <li class="dropdown">
                                 <a class="profile-image dropdown-toggle" data-toggle="dropdown"
@@ -90,15 +90,15 @@
                             </li>
                             <li>
                                 <div>
-                                    <a type="button" class="plus btn btn-default" href="{% url 'newrecipe' %}">
+                                    <a type="button" class="plus-bar btn btn-default" href="{% url 'newrecipe' %}">
                                         <span class="glyphicon glyphicon-plus"></span>{% trans "Add recipe" %}
                                     </a>
                                 </div>
                             </li>
                         {% else %}
-                            <a class="btn btn-default btn-eathub" href="{% url 'login' %}"
+                            <a class="btn btn-default btn-eathub-red" href="{% url 'login' %}"
                                role="button">{% trans "Sign in" %}</a>
-                            <a class="btn btn-default btn-eathub-inverted"
+                            <a class="btn btn-default btn-eathub-inverted-red"
                                href="{% url 'newaccount' %}">{% trans "Create account" %}</a>
                         {% endif %}
 
